--- a/Inicio.css
+++ b/Inicio.css
@@ -11,19 +11,19 @@ url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&di
 
 
 .navMenu {
-  position: absolute;
+  word-spacing: 50pt;   
+  position: relative;
   top: 8%;
-  left: 50%;
+  left: 57%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
-.navMenu a {
+.navMenu a {  
   color: white;
   text-decoration: none;
-  font-size: 1.5em;
-  font-weight: 500;
-  display: inline-block;
+  font-size: 30;
+  font-weight: 600;
   width: 100px;
   transition: all 0.2s ease-in-out;
 }
@@ -33,8 +33,6 @@ url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&di
 }
 
 .navMenu .dot {
-  width: 6px;
-  height: 6px;
   background: #fddb3a;
   border-radius: 50%;
   opacity: 0;
