--- a/noticias.css
+++ b/noticias.css
@@ -7,7 +7,7 @@
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-image: url(../img/background_dark.jpg);
+	background-color:dark;
 	background-size: cover;
 	background-position: center;
 }
